--- a/src/app/module/semester1/semester1.component.html
+++ b/src/app/module/semester1/semester1.component.html
@@ -1,5 +1,5 @@
 <div class="presentation">
-  <img class="panoramic" src="../../../assets/photos/presentation/0000.jpg" alt="" srcset="" />
+  <img class="panoramic" src="assets/photos/presentation/0000.jpg" alt="" srcset="" />
 </div>
 <div class="mt-5 d-flex justify-content-center">
   <h1 class="mb-0">Clausura Semestre 2024-I</h1>
