--- a/src/app/module/semester1/semester1.component.scss
+++ b/src/app/module/semester1/semester1.component.scss
@@ -1,7 +1,6 @@
 ::ng-deep body {
-  font-weight: 500;
-  background: #efecdb;
-  color: #5d4037;
+  background: #fffcff;
+  color: #2c201d;
 }
 * {
   box-sizing: border-box;
@@ -20,27 +19,29 @@
   overflow: hidden;
   height: 100vh;
 }
-.presentation {
+.full-presentation {
   width: 100vw;
-  background-color: #ccc;
-  .panoramic {
-    width: 100%;
+  display: flex;
+  justify-content: center;
+  .presentation {
+    width: 90vw;
+    background-color: white;
+    padding: 10px 10px 50px 10px;
+    border: 1px solid #bfbfbf;
+    box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.8);
+    .panoramic {
+      width: 100%;
+    }
   }
 }
 .simple-img {
   width: 90vw;
-  border: 12px solid #efecdb;
-  box-shadow: 0 10px 50px #5f2f1182;
-}
-
-.simple-img {
-  width: 90vw;
-  border: 12px solid #efecdb;
+  border: 12px solid #fffcff;
   box-shadow: 0 10px 50px #5f2f1182;
 }
 
 .container-fluid {
-  background-color: #efecdb;
+  background-color: #fffcff;
   height: 100px;
   width: 100%;
 }
@@ -50,13 +51,39 @@
   min-height: 100vh;
   width: auto;
   padding-left: 10px;
-  background-color: #efecdb;
+  background-color: #fffcff;
 }
 
 .masonry-item {
   transition: top 1s ease-in-out, left 1s ease-in-out;
 }
-.header {
-  width: 100%;
-  background-color: #efecdb;
+
+h1 {
+  font-size: x-large;
+}
+h3 {
+  font-size: large;
+}
+.custom-carousel {
+  max-width: 800px;
+  max-height: 600px;
+  margin: 0 auto;
+}
+
+.carousel-item-wrapper {
+  background-color: #ebe7eb;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 600px;
+  overflow: hidden;
+}
+
+.carousel-item-wrapper img {
+  max-height: 100%;
+  max-width: 100%;
+  object-fit: contain;
+}
+.oficial-page {
+  cursor: pointer;
 }
