--- a/src/app/module/semester1/semester1.component.html
+++ b/src/app/module/semester1/semester1.component.html
@@ -1,16 +1,55 @@
-<div class="presentation">
-  <img class="panoramic" src="assets/photos/presentation/0000.jpg" alt="" srcset="" />
+<div class="full-presentation mt-5">
+  <div class="presentation">
+    <img class="panoramic oficial-page" (click)="openDialog(presentation)" [src]="presentation.src" [alt]="presentation.alt" srcset="" />
+  </div>
 </div>
-<div class="mt-5 d-flex justify-content-center">
-  <h1 class="mb-0">Clausura Semestre 2024-I</h1>
+<div class="my-5 oficial-page" (click)="goToExternalLink()">
+  <div class="d-flex justify-content-center">
+    <img
+      class="d-flex justify-content-center mb-3"
+      style="width: 100px; height: 100px"
+      src="https://onghabiderinternacional.com.co/gallery_gen/c9e9a8a47ee1ee20cd664be5aa7aa925_224x216_0x0_224x224_crop.png?ts=1711729703"
+      alt=""
+      srcset=""
+    />
+  </div>
+  <div class="d-flex justify-content-center">
+    <h1 class="mb-0">Clausura Semestre 2024-I</h1>
+  </div>
+  <div class="d-flex justify-content-center">
+    <h3>ONG Habider Internacional</h3>
+  </div>
 </div>
-<div class="mb-3 d-flex justify-content-center">
-  <h3>ONG Habider Internacional</h3>
+
+<!-- importantes -->
+<div class="masonry-demo">
+  <ngx-masonry [options]="masonryOptions" style="width: 100%" [ordered]="true">
+    <div ngxMasonryItem [prepend]="true" *ngFor="let image of importantes; index as idx" style="width: 33%" class="p-2 shadow-card photo" (click)="openDialog(image)">
+      <img class="oficial-page" [src]="image.src" width="100%" />
+    </div>
+  </ngx-masonry>
+</div>
+
+<!-- diplomas -->
+<div class="my-5 d-flex justify-content-center">
+  <h1>Diplomas</h1>
+</div>
+<ngb-carousel *ngIf="diplomas && diplomas.length" class="custom-carousel">
+  <ng-template ngbSlide *ngFor="let image of diplomas; index as idx" id="{{ 'slide-' + idx }}">
+    <div class="carousel-item-wrapper">
+      <img [src]="image.src" alt="Diploma {{ idx + 1 }}" class="d-block w-100 img-fluid" (click)="openDialog(image)" />
+    </div>
+  </ng-template>
+</ngb-carousel>
+
+<!-- todas -->
+<div class="my-5 d-flex justify-content-center">
+  <h1>Momentos</h1>
 </div>
 <div class="masonry-demo">
   <ngx-masonry [options]="masonryOptions" style="width: 100%" [ordered]="true">
     <div ngxMasonryItem [prepend]="true" *ngFor="let image of images; index as idx" style="width: 33%" class="p-2 shadow-card photo" (click)="openDialog(image)">
-      <img [src]="image.src" width="100%" />
+      <img class="oficial-page" [src]="image.src" width="100%" />
     </div>
   </ngx-masonry>
 </div>
