--- a/src/app/components/image-preview/image-preview.component.scss
+++ b/src/app/components/image-preview/image-preview.component.scss
@@ -12,3 +12,13 @@ img {
   bottom: 8px;
   left: 16px;
 }
+
+.bottom-right {
+  position: absolute;
+  bottom: 8px;
+  right: 16px;
+}
+
+.pointer {
+  cursor: pointer;
+}
